# exchange-price-diff

./: Cargo.toml  README.md  binance_orderbook.csv  binance_trade.csv  config.toml  gate_orderbook.csv  gate_trade.csv
data/BINANCE/BNBUSDT/orderbook/: 2024-05-09.csv
data/BINANCE/BNBUSDT/trade/: 2024-05-09.csv
data/BINANCE/ETHUSDT/orderbook/: 2024-05-09.csv
data/BINANCE/ETHUSDT/trade/: 2024-05-09.csv
data/BINANCE/SOLUSDT/orderbook/: 2024-05-09.csv
data/BINANCE/SOLUSDT/trade/: 2024-05-09.csv
data/GATE/BNBUSDT/orderbook/: 2024-05-09.csv
data/GATE/BNBUSDT/trade/: 2024-05-09.csv
data/GATE/ETHUSDT/orderbook/: 2024-05-09.csv
data/GATE/ETHUSDT/trade/: 2024-05-09.csv
data/GATE/SOLUSDT/orderbook/: 2024-05-09.csv
data/GATE/SOLUSDT/trade/: 2024-05-09.csv
src/: main.rs
