[package]
name = "exchange-price-diff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto-crawler = "4.7.9"
crypto-markets = "1.3.11"
crypto-market-type = "1.1.6"
toml = "0.8.12"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.130", features = ["derive"] }
chrono = "0.4.23"
rust_decimal = { version = "1.18.0", features = ["serde-bincode"] }
csv = "1.3.0"
serde_json = "1.0.116"
